2007-12-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed unnecessary string copy. Updated doc and corrected indentation.
	* src/Base64.cc
	
	* Release 0.12.0

2007-12-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated translations
	* po/{de,fr,ja,nl,ru}.po
	
	Added Brazilian Portuguese, Catalan, Italian, Spanish, Swedish
	translations. Many thanks to translators.
	* po/{ca,es,it,pt_BR,sv}.po
	* po/LINGUAS

2007-12-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added a notice about URL
	* src/version_usage.cc

2007-12-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah com>

	Fixed the bug#1845750; CTRL+C does not stop torrent.
	aria2 repeatedly sends stopped request when tracker returns error code.
	* src/AnnounceList.cc
	* test/AnnounceListTest.cc
	* src/AnnounceTier.h

	Added a message when ctrl-c is hit.
	Now second ctrl-c is also handled in signal handler.
	* src/RequestGroupMan.{h, cc}
	* src/RequestGroup.{h, cc}
	* src/MultiUrlRequestInfo.cc
	* src/DownloadEngine.cc
	* src/TrackerWatcherCommand.cc

2007-12-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Code cleanup
	* src/Base64.cc (encode)

2007-12-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed Direct/IO enable/disable procesure in file allocation routine.
	* src/SingleFileAllocationIterator.cc
	(SingleFileAllocationIterator):
	Disable directIO if offset is not multiple of 512.
	(~SingleFileAllocationIterator): Removed a call to disableDirectIO.
	* src/MultiFileAllocationIterator.cc (allocateChunk):
	Enable created SingleFileAllocationIterator's directIO.
	* src/FileAllocationEntry.cc
	(FileAllocationEntry): Enable directIO here.
	(~FileAllocationEntry): Disable directIO here.

2007-12-06  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug: aria2 doesn't utilize fast set index offered by peer.
	* src/Peer.{h, cc}
	* src/DefaultPieceStorage.cc
	* test/DefaultPieceStorageTest.cc
