@@ -36,7 +36,7 @@ void MetaFileUtilTest::testParseMetaFile() {
 void MetaFileUtilTest::testBdecoding() {
   try {
     const char* str = "5:abcd";
-    MetaEntry* entry = MetaFileUtil::bdecoding(str, strlen(str));
+    MetaFileUtil::bdecoding(str, strlen(str));
     CPPUNIT_FAIL("DlAbortEx exception must be thrown.");
   } catch(DlAbortEx* ex) {
     delete ex;
@@ -46,7 +46,7 @@ void MetaFileUtilTest::testBdecoding() {
 
   try {
     const char* str = "i1234";
-    MetaEntry* entry = MetaFileUtil::bdecoding(str, strlen(str));
+    MetaFileUtil::bdecoding(str, strlen(str));
     CPPUNIT_FAIL("DlAbortEx exception must be thrown.");
   } catch(DlAbortEx* ex) {
     delete ex;
@@ -56,7 +56,7 @@ void MetaFileUtilTest::testBdecoding() {
 
   try {
     const char* str = "5abcd";
-    MetaEntry* entry = MetaFileUtil::bdecoding(str, strlen(str));
+    MetaFileUtil::bdecoding(str, strlen(str));
     CPPUNIT_FAIL("DlAbortEx exception must be thrown.");
   } catch(DlAbortEx* ex) {
     delete ex;
@@ -66,7 +66,7 @@ void MetaFileUtilTest::testBdecoding() {
 
   try {
     const char* str = "d";
-    MetaEntry* entry = MetaFileUtil::bdecoding(str, strlen(str));
+    MetaFileUtil::bdecoding(str, strlen(str));
     CPPUNIT_FAIL("DlAbortEx exception must be thrown.");
   } catch(DlAbortEx* ex) {
     delete ex;
